--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <h1 class="color-tertiary">Gallery</h1>
         <div class="row gallery-row">
             <div class="col-sm" id="g1">
-                <img src=C:\Users\westw.DESKTOP-22MQC2O\Desktop\Works\Art\Azia_full.png class="gallery-item" alt="first image" id="g1-img" data-toggle="modal" data-target="#modal1" >
+                <img src="" class="gallery-item" alt="first image" id="g1-img" data-toggle="modal" data-target="#modal1" >
                 <div class="caption" id="g1-cap">
                     "Azia"
                 </div>
             </div>
             <div class="col-sm" id="g2">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\JAEHA.jpg" class="gallery-item" alt="pardon-me-img" id="g2-img" data-toggle="modal" data-target="#modal2" >
+                <img src="https://66.media.tumblr.com/7ebac41805abd9a94551f27728d8095f/tumblr_ps0v26A9rv1yp6eflo2_r1_1280.jpg" class="gallery-item" alt="pardon-me-img" id="g2-img" data-toggle="modal" data-target="#modal2" >
                 <div class="caption" id="g2-cap">
                         "Pardon Me" 
                 </div>
@@ -75,7 +75,7 @@
                 </div>            
             </div>
             <div class="col-sm" id="g4">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\KIJA.jpg" class="gallery-item" alt="you-called-img" id="g4-img" data-toggle="modal" data-target="#modal4" >
+                <img src="https://66.media.tumblr.com/c4a9b28e9bf6fa61624ecb849c13dfb8/tumblr_ps0v26A9rv1yp6eflo1_1280.jpg" class="gallery-item" alt="you-called-img" id="g4-img" data-toggle="modal" data-target="#modal4" >
                 <div class="caption" id="g4-cap">
                         "You Called?"
                 </div>
@@ -83,13 +83,13 @@
         </div>
         <div class="row gallery-row">
             <div class="col-sm" id="g5">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\ZZZZ.jpg" class="gallery-item" alt="untitled-img" id="g5-img" data-toggle="modal" data-target="#modal5">
+                <img src="https://66.media.tumblr.com/0b516247a849134a08ae6f43a68c0f20/tumblr_pt9tko6fj41yp6eflo2_r2_1280.jpg" class="gallery-item" alt="untitled-img" id="g5-img" data-toggle="modal" data-target="#modal5">
                 <div class="caption" id="g5-cap">
                         "Untitled"
                 </div>            
             </div>
             <div class="col-sm" id="g6">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\yellow.jpg" class="gallery-item" alt="-img" id="g6-img" data-toggle="modal" data-target="#modal6" >
+                <img src="https://66.media.tumblr.com/0b98f5756544b6f96d431bcd7e970a3e/tumblr_ps803549q71yp6eflo1_r1_1280.jpg" class="gallery-item" alt="-img" id="g6-img" data-toggle="modal" data-target="#modal6" >
                 <div class="caption" id="g6-cap">
                         "Yellow Buddies"
                 </div>
