--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\JAEHA.jpg" class="mImage" id="m2" alt="pardon-me-img">
+                    <img src="https://66.media.tumblr.com/7ebac41805abd9a94551f27728d8095f/tumblr_ps0v26A9rv1yp6eflo2_r1_1280.jpg" class="mImage" id="m2" alt="pardon-me-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -183,7 +183,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\KIJA.jpg" class="mImage" id="m4" alt="you-called-img">
+                    <img src="https://66.media.tumblr.com/c4a9b28e9bf6fa61624ecb849c13dfb8/tumblr_ps0v26A9rv1yp6eflo1_1280.jpg" class="mImage" id="m4" alt="you-called-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -206,7 +206,7 @@
                         </button>
                     </div>
                     <div class="modal-body" id="modal-body">
-                        <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\ZZZZ.jpg" class="mImage" id="m5" alt="Untitled-img">
+                        <img src="https://66.media.tumblr.com/0b516247a849134a08ae6f43a68c0f20/tumblr_pt9tko6fj41yp6eflo2_r2_1280.jpg" class="mImage" id="m5" alt="Untitled-img">
                     </div>
                     <div class="container gallery-body">
                         <p>
@@ -234,7 +234,7 @@
                         </button>
                     </div>
                     <div class="modal-body" id="modal-body">
-                        <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\yellow.jpg" class="mImage" id="m6" alt="Yellow Buddies-img">
+                        <img src="https://66.media.tumblr.com/0b98f5756544b6f96d431bcd7e970a3e/tumblr_ps803549q71yp6eflo1_r1_1280.jpg" class="mImage" id="m6" alt="Yellow Buddies-img">
                     </div>
                     <div class="container gallery-body">
                         <p>
