--- a/index.html
+++ b/index.html
@@ -54,43 +54,43 @@
     <div class="gallery" id="gallery" style="background-color: #fbfbfb"> 
         <h1 class="color-tertiary">Gallery</h1>
         <div class="row gallery-row">
-            <div class="col-sm" id="g1">
-                <img src="" class="gallery-item" alt="first image" id="g1-img" data-toggle="modal" data-target="#modal1" >
-                <div class="caption" id="g1-cap">
+            <div class="col-sm" id="g0">
+                <img src=C:\Users\westw.DESKTOP-22MQC2O\Desktop\Works\Art\Azia_full.png class="gallery-item" alt="first image" id="g0-img" data-toggle="modal" data-target="#modal0" >
+                <div class="caption" id="g0-cap">
                     "Azia"
                 </div>
             </div>
-            <div class="col-sm" id="g2">
-                <img src="https://66.media.tumblr.com/7ebac41805abd9a94551f27728d8095f/tumblr_ps0v26A9rv1yp6eflo2_r1_1280.jpg" class="gallery-item" alt="pardon-me-img" id="g2-img" data-toggle="modal" data-target="#modal2" >
-                <div class="caption" id="g2-cap">
+            <div class="col-sm" id="g1">
+                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\JAEHA.jpg" class="gallery-item" alt="pardon-me-img" id="g1-img" data-toggle="modal" data-target="#modal1" >
+                <div class="caption" id="g1-cap">
                         "Pardon Me" 
                 </div>
             </div>
         </div>
         <div class="row gallery-row">
-            <div class="col-sm" id="g3">
-                <img src="images/Looks.jpg" class="gallery-item" alt="looks-img" id="g3-img" data-toggle="modal" data-target="#modal3">
-                <div class="caption" id="g3-cap">
+            <div class="col-sm" id="g2">
+                <img src="images/Looks.jpg" class="gallery-item" alt="looks-img" id="g2-img" data-toggle="modal" data-target="#modal2">
+                <div class="caption" id="g2-cap">
                         "Looks"
                 </div>            
             </div>
-            <div class="col-sm" id="g4">
-                <img src="https://66.media.tumblr.com/c4a9b28e9bf6fa61624ecb849c13dfb8/tumblr_ps0v26A9rv1yp6eflo1_1280.jpg" class="gallery-item" alt="you-called-img" id="g4-img" data-toggle="modal" data-target="#modal4" >
-                <div class="caption" id="g4-cap">
+            <div class="col-sm" id="g3">
+                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\KIJA.jpg" class="gallery-item" alt="you-called-img" id="g3-img" data-toggle="modal" data-target="#modal3" >
+                <div class="caption" id="g3-cap">
                         "You Called?"
                 </div>
             </div>
         </div>
         <div class="row gallery-row">
-            <div class="col-sm" id="g5">
-                <img src="https://66.media.tumblr.com/0b516247a849134a08ae6f43a68c0f20/tumblr_pt9tko6fj41yp6eflo2_r2_1280.jpg" class="gallery-item" alt="untitled-img" id="g5-img" data-toggle="modal" data-target="#modal5">
-                <div class="caption" id="g5-cap">
+            <div class="col-sm" id="g4">
+                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\ZZZZ.jpg" class="gallery-item" alt="untitled-img" id="g4-img" data-toggle="modal" data-target="#modal4">
+                <div class="caption" id="g4-cap">
                         "Untitled"
                 </div>            
             </div>
-            <div class="col-sm" id="g6">
-                <img src="https://66.media.tumblr.com/0b98f5756544b6f96d431bcd7e970a3e/tumblr_ps803549q71yp6eflo1_r1_1280.jpg" class="gallery-item" alt="-img" id="g6-img" data-toggle="modal" data-target="#modal6" >
-                <div class="caption" id="g6-cap">
+            <div class="col-sm" id="g5">
+                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\yellow.jpg" class="gallery-item" alt="-img" id="g5-img" data-toggle="modal" data-target="#modal5" >
+                <div class="caption" id="g5-cap">
                         "Yellow Buddies"
                 </div>
             </div>
@@ -100,7 +100,7 @@
 
 <!-- Gallery Modals -->
     <!-- Img1 Modal - "Azia" -->
-    <div class="modal fade" id="modal1">
+    <div class="modal fade" id="modal0">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header" id="modal title">
@@ -124,7 +124,7 @@
     </div>
 
     <!-- Img2 Modal - "Pardon Me" -->
-    <div class="modal fade" id="modal2">
+    <div class="modal fade" id="modal1">
         <div class="modal-dialog ">
             <div class="modal-content">
                 <div class="modal-header" id="modal title">
@@ -134,7 +134,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="https://66.media.tumblr.com/7ebac41805abd9a94551f27728d8095f/tumblr_ps0v26A9rv1yp6eflo2_r1_1280.jpg" class="mImage" id="m2" alt="pardon-me-img">
+                    <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\JAEHA.jpg" class="mImage" id="m2" alt="pardon-me-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -148,7 +148,7 @@
         </div>
     </div>   
     <!-- Img3 Modal - "Looks" -->
-    <div class="modal fade" id="modal3">
+    <div class="modal fade" id="modal2">
             <div class="modal-dialog ">
                 <div class="modal-content">
                     <div class="modal-header" id="modal title">
@@ -173,7 +173,7 @@
         </div>
 
     <!-- Img4 Modal - "You Called" -->
-    <div class="modal fade" id="modal4">
+    <div class="modal fade" id="modal3">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header" id="modal title">
@@ -183,7 +183,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="https://66.media.tumblr.com/c4a9b28e9bf6fa61624ecb849c13dfb8/tumblr_ps0v26A9rv1yp6eflo1_1280.jpg" class="mImage" id="m4" alt="you-called-img">
+                    <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\KIJA.jpg" class="mImage" id="m4" alt="you-called-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -196,7 +196,7 @@
     </div>
 
     <!-- Img5 Modal - "Untitled" -->
-    <div class="modal fade" id="modal5">
+    <div class="modal fade" id="modal4">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header" id="modal title">
@@ -206,7 +206,7 @@
                         </button>
                     </div>
                     <div class="modal-body" id="modal-body">
-                        <img src="https://66.media.tumblr.com/0b516247a849134a08ae6f43a68c0f20/tumblr_pt9tko6fj41yp6eflo2_r2_1280.jpg" class="mImage" id="m5" alt="Untitled-img">
+                        <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\ZZZZ.jpg" class="mImage" id="m5" alt="Untitled-img">
                     </div>
                     <div class="container gallery-body">
                         <p>
@@ -224,7 +224,7 @@
         </div>
 
     <!-- Img6 Modal - "Yellow Buddies" -->
-    <div class="modal fade" id="modal6">
+    <div class="modal fade" id="modal5">
             <div class="modal-dialog modal-lg">  <!-- add "modal-lg" class for landscape imgs-->
                 <div class="modal-content">
                     <div class="modal-header" id="modal title">
@@ -234,7 +234,7 @@
                         </button>
                     </div>
                     <div class="modal-body" id="modal-body">
-                        <img src="https://66.media.tumblr.com/0b98f5756544b6f96d431bcd7e970a3e/tumblr_ps803549q71yp6eflo1_r1_1280.jpg" class="mImage" id="m6" alt="Yellow Buddies-img">
+                        <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\yellow.jpg" class="mImage" id="m6" alt="Yellow Buddies-img">
                     </div>
                     <div class="container gallery-body">
                         <p>
