--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <h1 class="color-tertiary">Gallery</h1>
         <div class="row gallery-row">
             <div class="col-sm" id="g0">
-                <img src=C:\Users\westw.DESKTOP-22MQC2O\Desktop\Works\Art\Azia_full.png class="gallery-item" alt="first image" id="g0-img" data-toggle="modal" data-target="#modal0" >
+                <img src="https://66.media.tumblr.com/4df3ac98bef0069158bc446b4f14dbfc/tumblr_pujyz9SUJo1yp6eflo1_1280.png" class="gallery-item" alt="first image" id="g0-img" data-toggle="modal" data-target="#modal0" >
                 <div class="caption" id="g0-cap">
                     "Azia"
                 </div>
             </div>
             <div class="col-sm" id="g1">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\JAEHA.jpg" class="gallery-item" alt="pardon-me-img" id="g1-img" data-toggle="modal" data-target="#modal1" >
+                <img src="https://66.media.tumblr.com/7ebac41805abd9a94551f27728d8095f/tumblr_ps0v26A9rv1yp6eflo2_r1_1280.jpg" class="gallery-item" alt="pardon-me-img" id="g1-img" data-toggle="modal" data-target="#modal1" >
                 <div class="caption" id="g1-cap">
                         "Pardon Me" 
                 </div>
@@ -75,7 +75,7 @@
                 </div>            
             </div>
             <div class="col-sm" id="g3">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\KIJA.jpg" class="gallery-item" alt="you-called-img" id="g3-img" data-toggle="modal" data-target="#modal3" >
+                <img src="https://66.media.tumblr.com/c4a9b28e9bf6fa61624ecb849c13dfb8/tumblr_ps0v26A9rv1yp6eflo1_1280.jpg" class="gallery-item" alt="you-called-img" id="g3-img" data-toggle="modal" data-target="#modal3" >
                 <div class="caption" id="g3-cap">
                         "You Called?"
                 </div>
@@ -83,13 +83,13 @@
         </div>
         <div class="row gallery-row">
             <div class="col-sm" id="g4">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\ZZZZ.jpg" class="gallery-item" alt="untitled-img" id="g4-img" data-toggle="modal" data-target="#modal4">
+                <img src="https://66.media.tumblr.com/0b516247a849134a08ae6f43a68c0f20/tumblr_pt9tko6fj41yp6eflo2_r2_1280.jpg" class="gallery-item" alt="untitled-img" id="g4-img" data-toggle="modal" data-target="#modal4">
                 <div class="caption" id="g4-cap">
                         "Untitled"
                 </div>            
             </div>
             <div class="col-sm" id="g5">
-                <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\yellow.jpg" class="gallery-item" alt="-img" id="g5-img" data-toggle="modal" data-target="#modal5" >
+                <img src="https://66.media.tumblr.com/0b98f5756544b6f96d431bcd7e970a3e/tumblr_ps803549q71yp6eflo1_r1_1280.jpg" class="gallery-item" alt="-img" id="g5-img" data-toggle="modal" data-target="#modal5" >
                 <div class="caption" id="g5-cap">
                         "Yellow Buddies"
                 </div>
@@ -99,7 +99,7 @@
 
 
 <!-- Gallery Modals -->
-    <!-- Img1 Modal - "Azia" -->
+    <!-- Img0 Modal - "Azia" -->
     <div class="modal fade" id="modal0">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -110,7 +110,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="C:\Users\westw.DESKTOP-22MQC2O\Desktop\Works\Art\Azia_full.png" class="mImage" id="m1" alt="azia-img">
+                    <img src="https://66.media.tumblr.com/4df3ac98bef0069158bc446b4f14dbfc/tumblr_pujyz9SUJo1yp6eflo1_1280.png" class="mImage" id="m1" alt="azia-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -123,7 +123,7 @@
         </div>    
     </div>
 
-    <!-- Img2 Modal - "Pardon Me" -->
+    <!-- Img1 Modal - "Pardon Me" -->
     <div class="modal fade" id="modal1">
         <div class="modal-dialog ">
             <div class="modal-content">
@@ -134,7 +134,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\JAEHA.jpg" class="mImage" id="m2" alt="pardon-me-img">
+                    <img src=https://66.media.tumblr.com/7ebac41805abd9a94551f27728d8095f/tumblr_ps0v26A9rv1yp6eflo2_r1_1280.jpg" class="mImage" id="m2" alt="pardon-me-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -147,7 +147,7 @@
             </div>
         </div>
     </div>   
-    <!-- Img3 Modal - "Looks" -->
+    <!-- Img2 Modal - "Looks" -->
     <div class="modal fade" id="modal2">
             <div class="modal-dialog ">
                 <div class="modal-content">
@@ -172,7 +172,7 @@
             </div>    
         </div>
 
-    <!-- Img4 Modal - "You Called" -->
+    <!-- Img3 Modal - "You Called" -->
     <div class="modal fade" id="modal3">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -183,7 +183,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\KIJA.jpg" class="mImage" id="m4" alt="you-called-img">
+                    <img src="https://66.media.tumblr.com/c4a9b28e9bf6fa61624ecb849c13dfb8/tumblr_ps0v26A9rv1yp6eflo1_1280.jpg" class="mImage" id="m4" alt="you-called-img">
                 </div>
                 <div class="container gallery-body">
                     <p>
@@ -195,7 +195,7 @@
         </div>
     </div>
 
-    <!-- Img5 Modal - "Untitled" -->
+    <!-- Img4 Modal - "Untitled" -->
     <div class="modal fade" id="modal4">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
@@ -206,7 +206,7 @@
                         </button>
                     </div>
                     <div class="modal-body" id="modal-body">
-                        <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\ZZZZ.jpg" class="mImage" id="m5" alt="Untitled-img">
+                        <img src="https://66.media.tumblr.com/0b516247a849134a08ae6f43a68c0f20/tumblr_pt9tko6fj41yp6eflo2_r2_1280.jpg" class="mImage" id="m5" alt="Untitled-img">
                     </div>
                     <div class="container gallery-body">
                         <p>
@@ -223,7 +223,7 @@
             </div>    
         </div>
 
-    <!-- Img6 Modal - "Yellow Buddies" -->
+    <!-- Img5 Modal - "Yellow Buddies" -->
     <div class="modal fade" id="modal5">
             <div class="modal-dialog modal-lg">  <!-- add "modal-lg" class for landscape imgs-->
                 <div class="modal-content">
@@ -234,7 +234,7 @@
                         </button>
                     </div>
                     <div class="modal-body" id="modal-body">
-                        <img src="C:\Users\westw.DESKTOP-22MQC2O\OneDrive\Documents\Art\AnY\yellow.jpg" class="mImage" id="m6" alt="Yellow Buddies-img">
+                        <img src="https://66.media.tumblr.com/0b98f5756544b6f96d431bcd7e970a3e/tumblr_ps803549q71yp6eflo1_r1_1280.jpg" class="mImage" id="m6" alt="Yellow Buddies-img">
                     </div>
                     <div class="container gallery-body">
                         <p>
